# libnbspline

./: CMakeLists.txt  README.md  documentation.md
include/: nbspline.h
src/: nbspline.cpp  test_functionality.cpp  test_functionality_1d.cpp  test_functionality_3d.cpp
